--- a/style/css.css
+++ b/style/css.css
@@ -1,24 +1,82 @@
 :root {
-    --black: black;
+    --black: #171923;
     --white: white;
-    --blueviolet: #e89aff;
+    --blueviolet: #FF2D20;
 }
 
 body {
-    background-color: var(--white);
+    background-color: darkseagreen;
+    /*background-color: var(--white);*/
     transition: background-color 2.0s ease;
     color: var(--black);
+    text-align: center;
     font-size: 25px;
 }
 
-button {
+#btn-mode {
     cursor: pointer;
     border-color: black;
     border-radius: 10px;
+    float: right;
 }
 
 .dark-mode {
     background-color: var(--black);
     transition: background-color 0.5s ease;
     color: var(--blueviolet);
+}
+
+.hidden {
+    display: none;
+}
+
+.modal {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40%;
+
+    background-color: gray;
+    padding: 50px;
+    border-radius: 5px;
+    box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+    z-index: 10;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(3px);
+    z-index: 5;
+}
+
+.btn {
+    color: var(--black);
+    background-color: darkgray;
+    padding: 10px 15px;
+    border: 1px solid white;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 25px;
+}
+
+.close-modal {
+    position: absolute;
+    top: 1.2rem;
+    right: 2rem;
+    font-size: 3rem;
+    color: #333;
+    cursor: pointer;
+    border: none;
+    background: none;
+}
+
+.my-picture {
+    border-radius: 50%;
+    /*border: 5px solid var(--white);*/
 }
