--- a/style/css.css
+++ b/style/css.css
@@ -15,6 +15,7 @@ body {
 
 #btn-mode {
     cursor: pointer;
+    background-color: white;
     border-color: black;
     border-radius: 10px;
     float: right;
@@ -23,7 +24,8 @@ body {
 .dark-mode {
     background-color: var(--black);
     transition: background-color 0.5s ease;
-    color: var(--blueviolet);
+    /*color: var(--blueviolet);*/
+    color: var(--white);
 }
 
 .hidden {
